--- a/src/partials/sections/hero.html
+++ b/src/partials/sections/hero.html
@@ -13,7 +13,7 @@
     </a>
     <h1 class="logo hero__logo">Mimih<span class="normal">o</span></h1>
     <h2 class="hero__title">Ресторанно-готельний комплекс</h2>
-    <p class="hero__subtitle">Смак життя 24/7</p>
+    <p class="hero__subtitle">Смакss життя 24/7</p>
     <div class="hero__container--first">
       <a
         href="https://goo.gl/maps/5fHJMBBuwY2Lgnmz8"
@@ -45,36 +45,21 @@
     </div>
     <ul class="list social hero__social noshow-desktop">
       <li class="social__item">
-        <a
-          href=""
-          class="link social__link"
-          target="_blank"
-          rel="noopener noreferrer nofollow"
-        >
+        <a href="" class="link social__link" target="_blank" rel="noopener noreferrer nofollow">
           <svg width="24" height="24">
             <use href="./images/icons/icons.svg#icon-instagram"></use>
           </svg>
         </a>
       </li>
       <li class="social__item">
-        <a
-          href=""
-          class="link social__link"
-          target="_blank"
-          rel="noopener noreferrer nofollow"
-        >
+        <a href="" class="link social__link" target="_blank" rel="noopener noreferrer nofollow">
           <svg width="24" height="24">
             <use href="./images/icons/icons.svg#icon-facebook"></use>
           </svg>
         </a>
       </li>
       <li>
-        <a
-          href=""
-          class="link social__link"
-          target="_blank"
-          rel="noopener noreferrer nofollow"
-        >
+        <a href="" class="link social__link" target="_blank" rel="noopener noreferrer nofollow">
           <svg width="24" height="24">
             <use href="./images/icons/icons.svg#icon-telegram"></use>
           </svg>
